# covid-isolation-pub-2025

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  products_config.yml  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: pre-commit.yaml  testing.yml
analysis/: output_docs.md  parameters.yml  pipeline.md
analysis/scripts/: 01_prepare_data_for_stan.R  02_fit_viral_kinetics_by_symp_cat.R  03_extract_parameters_from_stan_fit.R  04_subsample_extracted_parameters.R  05_run_ind_scenarios.R  06_create_overall_category.R
analysis/tests/: test-stan_model.R  test_etl.R  test_parameters
etl/: inherent_preprocess_dataset.py  rvtn_preprocess_dataset.py
etl/utils/: general_utils.py  inherent_utils.py  rvtn_utils.py
isolation/: DESCRIPTION  NAMESPACE
isolation/R/: calculate_symp_cat_weights.R  create_stan_variables.R  estimate_symptom_improvement.R  extract_posteriors_to_df.R  generate_stan_input_list.R  get_antigen_prob_detection.R  get_dt_mid_approx.R  get_infectiousness_averted.R  prob_antigen_positive.R  prob_culture_positive.R  sample_ids_overall_symp_cat.R  simulate_intrinsic_infectiousness.R  simulate_isolation_current.R  simulate_isolation_proposed.R  stan_preprocess.R  triangle_vl.R  vl_fits_to_pdf.R
isolation/man/: calculate_symp_cat_weights.Rd  create_stan_variables.Rd  estimate_symptom_improvement.Rd  extract_posteriors_to_df.Rd  generate_stan_input_list.Rd  get_antigen_prob_detection.Rd  get_dt_mid_approx.Rd  get_infectiousness_averted.Rd  prob_antigen_positive.Rd  (+8 more)
renv/: settings.json
(+26 files in other folders)
