[tool.poetry]
name = "cfa-isolation-guidelines-venv"
version = "0.1.0"
description = ""
authors = ["chris-cfa <pwl3@cdc.gov>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"
pyyaml = "^6.0.1"
pre-commit = "^3.7.1"
detect-secrets = "^1.5.0"
openpyxl = "^3.1.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
